# flow-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  create_repo.py  download_model.py
src/: ai.rs  audio.rs  automation.rs  main.rs  ui.rs
