[package]
name = "flow"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "flow_v2"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
cpal = "0.15"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.2"
global-hotkey = "0.3"
parakeet-rs = { version = "0.3.6", features = ["cuda"] }
anyhow = "1.0"
dotenvy = "0.15"
ringbuf = "0.3"
tray-icon = "0.19"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Com"] }
